--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,8 +9,9 @@
 @import 'components/section-features';
 @import 'components/section-wedo';
 @import 'components/section-team';
+@import 'components/socials';
 @import 'components/section-clients';
-@import 'components/portfolio-filters';
+@import 'components/filters';
 @import 'components/portfolio';
 @import 'components/footer';
 @import 'components/footer-logo';
