--- a/sass/components/_footer-newsletter.scss
+++ b/sass/components/_footer-newsletter.scss
@@ -1,8 +1,9 @@
-.newsletter__form {
+
+.newsletter {
     display: flex;
     align-items: center;
-}
-.newsletter__input {
+
+    &__input {
     outline: none;
     margin: 0px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -19,9 +20,9 @@
     &::placeholder {
     font-size: 16px;
     color: rgba(255, 255, 255, 0.6);
+        }
     }
-}
-.newsletter__button {
+    &__button {
     cursor: pointer;
     display: inline-flex;
     align-items: center;
@@ -38,9 +39,10 @@
     border: none;
     box-shadow: 0px 4px rgba(0, 0, 0, 0.25);
     background-color: $accentColor;
-}
-.newsletter__icon {
+    }
+    &__icon {
     width: 24px;
     height: 24px;
     margin-left: 10px;
+    }
 }
