--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -1,7 +1,7 @@
-.team {
+.section--team {
     background-color: $teamBg;
-    padding-top: 94px;
-    padding-bottom: 94px;
+}
+.team {
 
     &__card {
     background-color: #fff;
@@ -28,30 +28,5 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
-    }
-}
-.team__socials {
-    display: inline-flex;
-    margin-top: 16px;
-    margin-left: 32px;
-    margin-right: 32px;
-    gap: 10px;
-}
-.team__social-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: $transDur $transTime;
-    fill: #AFB1B8;
-
-    &:hover,
-    &:focus {
-    background-color: $accentColor;
-    transition: $transDur $transTime;
-    fill: #fff;
     }
 }
