--- a/sass/components/_section-wedo.scss
+++ b/sass/components/_section-wedo.scss
@@ -1,4 +1,5 @@
-.wedo__thumb {
+.wedo {
+    &__thumb {
     position: relative;
 
     & > .wedo__label {
@@ -13,4 +14,5 @@
     bottom: 0px;
     width: 100%;
     }
+}
 }
