--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,6 +4,8 @@
     padding-bottom: 60px;
 
     &--spacing {
+        padding: 0px;
+        background-color: transparent;
         margin-right: 23px;
     }
 }
