--- a/css/main.css
+++ b/css/main.css
@@ -486,6 +486,7 @@ ol, ul {
 
 .social {
   display: flex;
+  align-items: center;
   margin-top: 16px;
   margin-left: 32px;
   margin-right: 32px;
@@ -529,6 +530,10 @@ ol, ul {
   height: 20px;
 }
 
+.social--footer {
+  margin: 0px;
+}
+
 .client__link {
   display: flex;
   align-items: center;
@@ -549,15 +554,14 @@ ol, ul {
   fill: #2196F3;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.icon-client {
+.client__icon {
   fill: #AFB1B8;
   display: block;
   width: 106px;
   height: 60px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-client:hover, .icon-client:focus {
+.client__icon:hover, .client__icon:focus {
   fill: #2196F3;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -665,6 +669,8 @@ ol, ul {
   padding-bottom: 60px;
 }
 .footer--spacing {
+  padding: 0px;
+  background-color: transparent;
   margin-right: 23px;
 }
 
@@ -712,12 +718,6 @@ ol, ul {
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
   font-weight: 400;
-}
-
-.footer-socials {
-  display: flex;
-  align-items: center;
-  gap: 10px;
 }
 
 .newsletter {
